# zephyr

samples/net/wifi_webconfig/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/net/wifi_webconfig/boards/: rd_rw612_bga.conf
samples/net/wifi_webconfig/src/: index.html  main.c
